<resources>

    <string name="app_name">MobileSecurityGuard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">菜单设置</string>
    <string name="title_activity_splash">手机安全卫士</string>
    <string name="version_number">版本号:</string>
    <string name="high_tool">高级工具</string>
    <string name="password">密码</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="please_set_password">请设置密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="is_check_update">是否检查版本更新</string>
    <string name="function">功能图标</string>
    <string name="icon">图标</string>
    <string name="hint">xx模块</string>
    <string name="personal">个人中心</string>
    <string name="contact_name">断桥</string>
    <string name="contact_number">123456789</string>
    <string name="select_contact">选择联系人</string>
    <string name="mobile_security">手机防盗</string>
    <string name="mobile_safe_number">手机安全号码为：</string>
    <string name="security_setting">防盗保护设置</string>
    <string name="security_open_already">防盗保护已经开启</string>
    <string name="setting_reset">重新进入设置向导</string>
    <string name="order_text">#*location*#获取手机的位置\n#*wipedata*#手机设置为出厂模式\n#*lockscreen*#给手机加密 锁定屏幕\n#*alarm*#发出报警音乐</string>
    <string name="setting_center">设置中心</string>
    <string name="update_setting_automatically">自动更新设置</string>
    <string name="update_setting_automatically_is_open">自动更新已开启</string>
    <string name="welcome_to_use_mobile_security">1.欢迎使用手机防盗</string>
    <string name="your_mobile_security_guard">您的手机防盗卫士:</string>
    <string name="sim_card_change_alarm">sim卡变更报警</string>
    <string name="gps_tracking">gps追踪</string>
    <string name="long_range_remoting_data">远程销毁数据</string>
    <string name="long_range_locking_screen">远程锁屏</string>
    <string name="binding_of_mobile_phone_card">2.手机卡的绑定</string>
    <string name="if_binding_of_mobile_phone_card">一旦sim卡绑定,下次重启手机如果sim卡发生改变,就发送报警短信:</string>
    <string name="click_to_bind_sim_card">点击绑定sim卡</string>
    <string name="set_safe_number">3.设置安全号码</string>
    <string name="if_sim_card_change">一旦sim卡变更\n报警短信会发送到安全号码上:</string>
    <string name="input_safe_number_or_select_one_please">请输入安全号码,或者选择一个号码</string>
    <string name="congratulations_to_finish_your_setting">4.恭喜你设置完成</string>
    <string name="recommend_you_open_the_anti_theft_protection_strongly">强烈建议你开启防盗保护:</string>
    <string name="anti_theft_protection_is_closed">防盗保护没有开启</string>
    <string name="setting_finish">设置完成</string>
    <string name="address_of_phone_number">手机号码归属地查询</string>
    <string name="setting_address_of_phone_number_service">设置手机归属地服务</string>
    <string name="address_of_phone_number_service">号码归属地服务未开启</string>
    <string name="change_show_type">更改归属地显示风格</string>
    <string name="change_show_location">更改归属地显示位置</string>
    <string name="black_number_management">黑名单管理</string>
    <string name="add">添加</string>
    <string name="move_to_change_the_location">按住提示小窗体并拖动更改归属地显示的位置</string>
    <string name="the_location">归属地显示的位置</string>
    <string name="query">查询</string>
    <string name="message_backup">短信备份</string>
    <string name="message_recovery">短信还原</string>
    <string name="function_name">功能名字</string>
    <string name="all_app">所有程序</string>
    <string name="loading_apps">正在加载应用程序。。。</string>
    <string name="uninstall">卸载</string>
    <string name="start">运行</string>
    <string name="share">分享</string>
    <string name="program_lock">程序锁</string>
    <string name="loading_program">正在加载应用程序</string>
    <string name="package_name">包名</string>
    <string name="set_program_lock_service">设置程序锁服务</string>
    <string name="program_lock_service_closed">程序锁服务未开启</string>
    <string name="ram_size">内存大小</string>
    <string name="clear">一键清理</string>
    <string name="program_setting">程序设置</string>
    <string name="set_visible">设置显示</string>
    <string name="no_show_system_process">不显示系统进程</string>
    <string name="no_clear_when_lock_screen">锁屏不清理</string>
    <string name="set_clear_ram_when_lock_screen">设置锁屏清理内存</string>
    <string name="process_number">进程数目</string>
    <string name="available_ram">可用内存</string>
    <string name="province_and_city">天外省飞仙市</string>
    <string name="common_num">常用号码</string>
    <string name="traffic_manager">流量统计</string>
    <string name="status">状态</string>
    <string name="start_to_clear">开始清理SDCard</string>
    <string name="clear_cache">清理缓存</string>
    <string name="update_black_number">更改黑名单号码</string>
    <string name="delete_black_number">删除黑名单号码</string>
    <string name="name">名称</string>
    <string name="program_size">程序大小</string>
    <string name="cache_size">缓存大小</string>
    <string name="data_size">数据大小</string>

</resources>