<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_set_password"
        android:textColor="@color/text_on_textView"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_first_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_password" />

    <EditText
        android:id="@+id/et_next_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_password_again" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:text="@string/cancle" />
    </LinearLayout>

</LinearLayout>