<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_code_size"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:text="@string/program_size" />

    <TextView
        android:id="@+id/tv_cache_size"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:text="@string/cache_size" />

    <TextView
        android:id="@+id/tv_data_size"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:text="@string/data_size" />

</LinearLayout>