<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        style="@style/text_title_style"
        android:gravity="left"
        android:text="@string/congratulations_to_finish_your_setting" />

    <View style="@style/view_divide_line_style" />

    <TextView
        style="@style/text_content_style"
        android:text="@string/recommend_you_open_the_anti_theft_protection_strongly" />

    <CheckBox
        android:id="@+id/cb_setup4_start_protect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anti_theft_protection_is_closed" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageView
            style="@style/image_start_offline_style"
            android:contentDescription="@string/icon" />

        <ImageView
            style="@style/image_start_offline_style"
            android:contentDescription="@string/icon" />

        <ImageView
            style="@style/image_start_offline_style"
            android:contentDescription="@string/icon" />

        <ImageView
            style="@style/image_start_online_style"
            android:contentDescription="@string/icon" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/icon"
            android:src="@drawable/setup4_2" />

        <Button
            style="@style/button_pre_style"
            android:onClick="pre" />

        <Button
            style="@style/button_next_style"
            android:text="@string/setting_finish"
            android:onClick="next" />
    </RelativeLayout>

</LinearLayout>