<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        style="@style/titile"
        android:text="@string/setting_center" />

    <View style="@style/view_divide_line_style" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/update_setting_automatically"
            android:textColor="@color/text_on_textView"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb__setting_center_auto_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/update_setting_automatically_is_open" />
    </RelativeLayout>

    <include layout="@layout/divide_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <LinearLayout
            android:layout_width="280dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="280dip"
                android:layout_height="wrap_content"
                android:text="@string/set_program_lock_service"
                android:textColor="@color/text_on_textView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_setting_applock"
                android:layout_width="280dip"
                android:layout_height="wrap_content"
                android:text="@string/program_lock_service_closed"
                android:textColor="#ffff0000"
                android:textSize="14sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_setting_applock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <include layout="@layout/divide_line" />

</LinearLayout>