<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dip" >

        <TextView
            android:id="@+id/tv_task_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/process_number" />

        <TextView
            android:id="@+id/tv_avail_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/available_ram" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" >

        <ListView
            android:id="@+id/lv_task_manager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dip"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@drawable/item_background_selector" >
        </ListView>

        <LinearLayout
            android:id="@+id/ll_task_manager_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible" >

            <ProgressBar
                android:layout_width="60dip"
                android:layout_height="60dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_program"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="killTask"
            android:text="@string/clear" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="appSetting"
            android:text="@string/program_setting" />
    </LinearLayout>

</LinearLayout>