<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        style="@style/text_title_style"
        android:gravity="left"
        android:text="@string/binding_of_mobile_phone_card" />

    <View style="@style/view_divide_line_style" />

    <TextView
        style="@style/text_content_style"
        android:text="@string/if_binding_of_mobile_phone_card" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rl_sim_bind_bg" >

        <TextView
            style="@style/text_content_style"
            android:text="@string/click_to_bind_sim_card" />

        <ImageView
            android:id="@+id/iv_bind_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/icon"
            android:src="@drawable/switch_off_normal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageView
            style="@style/image_start_offline_style"
            android:contentDescription="@string/icon" />

        <ImageView
            style="@style/image_start_online_style"
            android:contentDescription="@string/icon" />

        <ImageView
            style="@style/image_start_offline_style"
            android:contentDescription="@string/icon" />

        <ImageView
            style="@style/image_start_offline_style"
            android:contentDescription="@string/icon" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/icon"
            android:src="@drawable/bind" />

        <Button
            style="@style/button_pre_style"
            android:onClick="pre" />

        <Button
            style="@style/button_next_style"
            android:onClick="next" />
    </RelativeLayout>

</LinearLayout>